fixes for images on mobile

--- a/default.css
+++ b/default.css
@@ -9,6 +9,8 @@ body {
 header {
   text-align: center;
   font-family: Lora, "Source Serif 4", serif;
+  font-size: x-large;
+  font-weight: bold;
 }
 
 nav {
@@ -21,16 +23,11 @@ html {
   font: 2em;
 }
 
-h1 {
-  text-align: center;
-  font-family: serif;
-  font: x-large, bold;
-}
-
 h2 {
   text-align: center;
-  font-family: serif;
-  font: large, italic;
+  font-family: Lora, "Source Serif 4", serif;
+  font-style: italic;
+  font-size: large;
 }
 
 .image-container {
@@ -75,6 +72,17 @@ h2 {
     font: 2em;
   }
   
+  .image-container {
+    flex-direction: row; /* Change flex direction to row for mobile devices */
+    align-items: center; /* Align items in the center vertically */
+  }
+
+  .image-wrapper {
+      flex: 1 0 100%; /* Make each image wrapper take full width on mobile */
+      height: auto; /* Allow height to adjust automatically */
+      margin: 0; /* Remove margin */
+  }
+
   .image-container img {
     width: 100%; /* Set the width to 100% on smaller screens */
     max-width: none; /* Remove the maximum width restriction */
